--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root,
+html,
+body {
+    height: 100%;
+    font-family: 'Poppins';
+}
